// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BuildedPreflightStep > toString options: function, pickup 1`] = `
"
/* beforePreflightStep(index: 1) */
/* end_block */


				result = this.preflightSteps[1].processFunction(
					request,
					this.preflightSteps[1].params.options(floor.pickup),
					this.preflightSteps[1].params.input(floor.pickup)
				);

				
/* beforeTreatResultPreflightStep(index: 1) */
/* end_block */


				if(result instanceof this.Response){

break Execution;
}

				
/* beforeIndexingResultPreflightStep(index: 1) */
/* end_block */


				floor.drop("rr", result["rr"]);
floor.drop("tt", result["tt"]);
				

/* afterPreflightStep(index: 1) */
/* end_block */
"
`;

exports[`BuildedPreflightStep > toString options: object, input, skip 1`] = `
"
/* beforePreflightStep(index: 1) */
/* end_block */


		if(!this.preflightSteps[1].params.skip(floor.pickup)){
			
				result = this.preflightSteps[1].processFunction(
					request,
					this.preflightSteps[1].params.options,
					this.preflightSteps[1].params.input(floor.pickup)
				);

				
/* beforeTreatResultPreflightStep(index: 1) */
/* end_block */


				if(result instanceof this.Response){

break Execution;
}

				
/* beforeIndexingResultPreflightStep(index: 1) */
/* end_block */


				
				
		}
		

/* afterPreflightStep(index: 1) */
/* end_block */
"
`;
